Add dual algo support

--- a/static/templates/index.html
+++ b/static/templates/index.html
@@ -120,6 +120,18 @@
                     <td>Difficulty</td>
                     <td>{{$be.Difficulty}}</td>
                 </tr>
+                {{if $be.DifficultyMinotaurx}}
+                <tr>
+                    <td>Difficulty (MinotaurX)</td>
+                    <td>{{$be.DifficultyMinotaurx}}</td>
+                </tr>
+                {{end}}
+                {{if $be.DifficultyX16rt}}
+                <tr>
+                    <td>Difficulty (X16RT)</td>
+                    <td>{{$be.DifficultyX16rt}}</td>
+                </tr>
+                {{end}}
                 {{if $be.Timeoffset}}
                 <tr>
                     <td>Timeoffset</td>
