Fix failed build test

--- a/static/templates/block.html
+++ b/static/templates/block.html
@@ -55,31 +55,24 @@
                 <tr>
                     <td>Bits</td>
                     <td class="ellipsis">{{$b.Bits}}</td>
-                </tr>
-                {{if $b.PowType}}
-                <tr>
+                </tr>{{if $b.PowType}}<tr>
                     <td>PoW Type</td>
                     <td class="ellipsis">{{$b.PowType}}</td>
-                </tr>
-                {{end}}
-                <tr>
+                </tr>{{end}}<tr>
                     <td>Difficulty</td>
                     <td class="ellipsis">{{$b.Difficulty}}</td>
                 </tr>
-                {{if $b.DifficultyMinotaurx}}
-                <tr>
+                {{if $b.DifficultyMinotaurx}}<tr>
                     <td>Difficulty (MinotaurX)</td>
                     <td class="ellipsis">{{$b.DifficultyMinotaurx}}</td>
                 </tr>
                 {{end}}
-                {{if $b.DifficultyX16rt}}
-                <tr>
+                {{if $b.DifficultyX16rt}}<tr>
                     <td>Difficulty (X16RT)</td>
                     <td class="ellipsis">{{$b.DifficultyX16rt}}</td>
                 </tr>
                 {{end}}
-                {{if $b.DifficultyX16r}}
-                <tr>
+                {{if $b.DifficultyX16r}}<tr>
                     <td>Difficulty (X16R)</td>
                     <td class="ellipsis">{{$b.DifficultyX16r}}</td>
                 </tr>
